css/style.css
* {
	margin: 0;
}

html, body {
	width: 100%;
	height: 100%;
}

@font-face {
    font-family: Biko;
    src: url('../fonts/Biko_Regular.otf');
    url('../fonts/Biko_Regular.otf'); /* IE */
}

body:before {
	position: fixed;
	z-index: -1;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	display: block;
	background: #063651; /* For browsers that do not support gradients */
	background: -webkit-linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%); 
	background: -o-linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%);
	background: -moz-linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%); 
	background: linear-gradient(#020913 0%, #00121E 19%, #001F3A 28%, #063651 56%, #2B546B 71%, #827C6C 100%); /* Standard syntax */
	content: "";
}

body {
	height: 100%;
    color: white;
    font-family: Biko, sans-serif, "Times New Roman";
}

.footer a {
    text-decoration: none;
}

.past-links {
    margin: 1em;
    color: white;
}

canvas {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
}

.logo {
	max-width: 90%;
	padding-top: 60px;
	width: 500px;
}


.email-input {
    width: 350px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2em;
}

h5 {
    margin-top: 1em;
}


.footer {
	height: 100px;
	text-align: center;
	margin-top: -140px;
	padding-top: 50px;
	width: 100%;
}

.wrapper {
	width: 100%;
	min-height: 100%;
	text-align: center;
	margin-bottom: -100px;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.logo {
	width: 40%;
}

.wrapper:after {
	content: "";
	display: block;
}

.footer, .wrapper:after {
  height: 142px; 
}

.content {
		max-width: 100%;
		margin: auto;
}

.fa {
	color: #ffffff;
	margin: 0.5em;
}

.fa:hover {
	color: #dfdfdf;
}

a:hover {
	color: #dfdfdf;
}

.title {
	margin-top: 1em;
}

.btn-primary {
	color: #fff;
	background-color: #827C6C;
	border: 0;
	border-radius: 0;
}

.input-group {
    display: flex;
}

.btn-primary:hover {
	background-color: #726C5C;
}

.squared {
	border: 0;
	border-radius: 0;
}

.msg {
	margin-top: 0.5em;
}

/* Phone screen sizes */
@media only screen and (max-device-width: 480px) {
	h2 {
		font-size: 1.5rem;
	}
	h5 {
		font-size: 1rem;
	}
	.email-input {
		padding: 0 10px 0 10px;
		max-width: 100%;
	}
}

/* Small tablet screen sizes */
@media only screen and (max-device-width: 768px) and (min-device-width: 481px) {
	.email-input {
		width: 500px;
	}
}

/* Large tablet screen sizes */
@media only screen and (max-device-width: 1280px) and (min-device-width: 769px) {
	.logo {
		width: 80%;
	}
	.title {
		font-size: 4rem;
	}
	h2 {
		font-size: 3rem;
	}
	h5 {
		font-size: 2rem;
	}
	.email-input {
		width: 500px;
	}
}

